# rust-warp-rest-api-sse-example

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs  sse.rs  user.rs
src/emitter/: mod.rs  sse_emitter.rs
src/handlers/: mod.rs  sse_handler.rs  user_handler.rs
src/models/: user.rs
src/repository/: user_repository.rs
src/routes/: mod.rs  sse_route.rs  user_route.rs
