[package]
name = "rust-warp-rest-api-example"
version = "0.1.0"
authors = ["Wojciech Żurek"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
#tokio-stream = "0.1"
#futures = "0.3"
warp = "0.3"
pretty_env_logger = "0.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }